[tool.poetry]
name = "pcapfilter"
version = "0.2.1"
description = """\
A tool to interact with netowkr traffic captured with tcpudmp or wireshark.
"""
authors = ["Nahuel Defossé <nahuel.defosse@gmail.com>"]
homepage = 'https://github.com/D3f0/pcapfilter'

[tool.poetry.dependencies]
python = "^3.6"
scapy = "^2.4"
click = "^7.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.9.3"
mypy = "^0.650.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.6"
pytest = "^4.0"
pytest-cov = "^2.6"
pytest-click = "^0.3.0"
pytest-mypy = "^0.3.2"
pytest-isort = "^0.2.1"
pytest-sugar = "^0.9.2"
pytest-flake8 = "^1.0"
pytest-html = "^1.19"
watchdog = "^0.9.0"
sphinx = "^2.0"
hunter = "^2.2"


[tool.poetry.scripts]
pcapfilter = 'pcapfilter.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
